--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div><input type="checkbox" name="activities" value="Other" id="other-activity"> <label for="other-activity">Other:</label> <input type="text" maxlength="100"></div>
         </div>
 
-        <label for="devices"><h3>What activities do you complete when you are online? (select all that apply)</h3></label>
+        <label for="devices"><h3>What devices do you use to access the internet? (select all that apply)</h3></label>
         <div id="devices">
           <div><input type="checkbox" name="devices" value="DesktopPC" id="desktop"> <label for="desktop">Desktop PC</label></div>
           <div><input type="checkbox" name="devices" value="Laptop" id="laptop"> <label for="laptop">Laptop</label></div>
